--- a/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
+++ b/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Mhn-Ic-VJp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14E11f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Mhn-Ic-VJp">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -102,6 +102,24 @@
             </objects>
             <point key="canvasLocation" x="1731" y="859"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="i0a-Cq-wPP">
+            <objects>
+                <viewController id="J1e-qJ-W3Z" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KLl-ie-azD"/>
+                        <viewControllerLayoutGuide type="bottom" id="2Aj-gv-024"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EI9-8e-j5T">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jG9-k0-zdH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1682" y="1553"/>
+        </scene>
         <!--Dashboard-->
         <scene sceneID="m2z-G3-Mm6">
             <objects>
@@ -136,6 +154,132 @@
                             <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="APHDashboardWalkTestComparisonTableViewCell" rowHeight="225" id="K3U-wj-ekE" userLabel="APCDashboardGraphTableViewCell" customClass="APHDashboardWalkTestComparisonTableViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K3U-wj-ekE" id="JAV-LO-edr">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWg-zu-GJm" userLabel="Top Line">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                            <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="Dsi-x6-MeC"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JYQ-bU-39Y" customClass="APCNormalDistributionGraphView">
+                                            <rect key="frame" x="4" y="63" width="371" height="154"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f3L-b1-uec" userLabel="Tint View">
+                                            <rect key="frame" x="0.0" y="1" width="4" height="217"/>
+                                            <color key="backgroundColor" red="0.93725490199999995" green="0.2666666667" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="4" id="HwX-zP-guQ"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IS3-9A-Ha1">
+                                            <rect key="frame" x="335" y="14" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="NBp-aQ-jVb"/>
+                                                <constraint firstAttribute="width" constant="30" id="b7L-nm-dvS"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="expand_icon">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="expandTapped:" destination="K3U-wj-ekE" eventType="touchUpInside" id="e17-Yc-UXy"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6-Minute Walk Test Comparison" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAK-SH-NkD">
+                                            <rect key="frame" x="16" y="8" width="182" height="26"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="182" id="28N-Ge-6of"/>
+                                                <constraint firstAttribute="height" constant="26" id="hPF-Wy-9eF"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                            <color key="textColor" red="0.01176470588" green="0.62352941179999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Score: 222" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8V-oD-6dc">
+                                            <rect key="frame" x="17" y="38" width="302" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="aag-Af-2UV"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eYV-iO-mow" userLabel="Bottom View">
+                                            <rect key="frame" x="0.0" y="218" width="375" height="7"/>
+                                            <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="7" id="YKn-4f-E5V"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xkF-GT-yIY" userLabel="Bottom line">
+                                            <rect key="frame" x="0.0" y="217" width="375" height="1"/>
+                                            <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="mz0-Vs-vfE"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LSS-QM-kfj">
+                                            <rect key="frame" x="198" y="8" width="44" height="27"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="44" id="ALi-FD-46L"/>
+                                                <constraint firstAttribute="height" constant="27" id="dP9-2w-G6Z"/>
+                                            </constraints>
+                                            <state key="normal" image="info_icon">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <state key="highlighted" image="info_icon_selected"/>
+                                            <connections>
+                                                <action selector="infoTapped:" destination="K3U-wj-ekE" eventType="touchUpInside" id="cOO-e5-Sc2"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="IS3-9A-Ha1" secondAttribute="trailing" constant="2" id="7oQ-BB-nvz"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="xkF-GT-yIY" secondAttribute="bottom" constant="-1" id="Dgq-DK-Bka"/>
+                                        <constraint firstItem="IS3-9A-Ha1" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" constant="6" id="Euh-yf-op7"/>
+                                        <constraint firstItem="JYQ-bU-39Y" firstAttribute="bottom" secondItem="JAV-LO-edr" secondAttribute="bottomMargin" id="Fbh-wW-qfw"/>
+                                        <constraint firstItem="xkF-GT-yIY" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leading" id="IK6-Sh-4Ro"/>
+                                        <constraint firstAttribute="trailing" secondItem="eYV-iO-mow" secondAttribute="trailing" id="KQr-Y1-56j"/>
+                                        <constraint firstItem="tAK-SH-NkD" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" id="Ki1-29-9P1"/>
+                                        <constraint firstItem="LSS-QM-kfj" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" id="L7w-yS-Ux9"/>
+                                        <constraint firstItem="LSS-QM-kfj" firstAttribute="leading" secondItem="tAK-SH-NkD" secondAttribute="trailing" id="N8i-oA-InP"/>
+                                        <constraint firstAttribute="trailing" secondItem="JYQ-bU-39Y" secondAttribute="trailing" id="Qjs-CH-x3N"/>
+                                        <constraint firstItem="eYV-iO-mow" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leading" id="Sxr-xn-sdz"/>
+                                        <constraint firstItem="JYQ-bU-39Y" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leading" constant="4" id="UEm-BL-reI"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Z8V-oD-6dc" secondAttribute="trailing" constant="48" id="UYk-XL-L4R"/>
+                                        <constraint firstItem="f3L-b1-uec" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leading" id="WuR-33-zIC"/>
+                                        <constraint firstItem="JYQ-bU-39Y" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" constant="55" id="YN4-X6-PmF"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="eYV-iO-mow" secondAttribute="bottom" constant="-8" id="aZx-hi-FIE"/>
+                                        <constraint firstAttribute="trailing" secondItem="xkF-GT-yIY" secondAttribute="trailing" id="cSj-mf-WUl"/>
+                                        <constraint firstItem="Z8V-oD-6dc" firstAttribute="top" secondItem="tAK-SH-NkD" secondAttribute="bottom" constant="4" id="cdK-EJ-oUl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="f3L-b1-uec" secondAttribute="bottom" constant="-1" id="gFb-Ca-xLQ"/>
+                                        <constraint firstItem="UWg-zu-GJm" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leading" id="hx5-MO-Ma0"/>
+                                        <constraint firstItem="Z8V-oD-6dc" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leadingMargin" constant="9" id="ll4-cV-pAz"/>
+                                        <constraint firstItem="UWg-zu-GJm" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" constant="-8" id="nDg-tb-pRS"/>
+                                        <constraint firstItem="tAK-SH-NkD" firstAttribute="leading" secondItem="JAV-LO-edr" secondAttribute="leadingMargin" constant="8" id="seg-1O-jrB"/>
+                                        <constraint firstItem="f3L-b1-uec" firstAttribute="top" secondItem="JAV-LO-edr" secondAttribute="topMargin" constant="-7" id="sny-6H-Meb"/>
+                                        <constraint firstAttribute="trailing" secondItem="UWg-zu-GJm" secondAttribute="trailing" id="w1V-e1-KUw"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="infoButton" destination="LSS-QM-kfj" id="C1g-OE-5hf"/>
+                                    <outlet property="lineGraphView" destination="JYQ-bU-39Y" id="4ck-iz-NFb"/>
+                                    <outlet property="normalDistributionGraphView" destination="JYQ-bU-39Y" id="tsl-w9-7BQ"/>
+                                    <outlet property="resizeButton" destination="IS3-9A-Ha1" id="Yaf-Gb-dQ0"/>
+                                    <outlet property="subTitleLabel" destination="Z8V-oD-6dc" id="pTk-dP-xgB"/>
+                                    <outlet property="tintView" destination="f3L-b1-uec" id="o89-7g-aOD"/>
+                                    <outlet property="titleLabel" destination="tAK-SH-NkD" id="ve4-zi-427"/>
+                                    <outlet property="titleLabelWidthConstraint" destination="28N-Ge-6of" id="xb4-I2-zT6"/>
+                                </connections>
+                            </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="APCDashboardPieGraphTableViewCell" rowHeight="288" id="vdI-40-L4l" customClass="APCDashboardPieGraphTableViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
