--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/APHHeartAgeSummary.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VDE-ac-cZA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14E7f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VDE-ac-cZA">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -42,7 +42,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heart Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6K-Vg-uR2">
-                                                    <rect key="frame" x="0.0" y="8" width="321" height="25.5"/>
+                                                    <rect key="frame" x="0.0" y="8" width="321" height="26"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -76,13 +76,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Heart Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbU-zA-jS7">
-                                                    <rect key="frame" x="0.0" y="142" width="161" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="142" width="161" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekM-93-iUw">
-                                                    <rect key="frame" x="160" y="142" width="161" height="20.5"/>
+                                                    <rect key="frame" x="160" y="142" width="161" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -91,7 +91,7 @@
                                             <constraints>
                                                 <constraint firstItem="B2Q-e6-nNJ" firstAttribute="width" secondItem="ekM-93-iUw" secondAttribute="width" id="1jc-H1-wyB"/>
                                                 <constraint firstItem="u6K-Vg-uR2" firstAttribute="leading" secondItem="n0S-8H-TRF" secondAttribute="leadingMargin" constant="-8" id="3T1-Ob-8yI"/>
-                                                <constraint firstItem="zL8-mk-tfO" firstAttribute="leading" secondItem="n0S-8H-TRF" secondAttribute="leadingMargin" constant="-8" id="5Uv-3B-zjD"/>
+                                                <constraint firstItem="zL8-mk-tfO" firstAttribute="leading" secondItem="n0S-8H-TRF" secondAttribute="leading" id="5Uv-3B-zjD"/>
                                                 <constraint firstItem="jT7-gp-eA6" firstAttribute="centerX" secondItem="rbU-zA-jS7" secondAttribute="centerX" constant="-0.25" id="6UX-SV-L4Y"/>
                                                 <constraint firstItem="i0x-Lt-zJk" firstAttribute="top" secondItem="n0S-8H-TRF" secondAttribute="topMargin" constant="75" id="7sY-iw-Xa9"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="zL8-mk-tfO" secondAttribute="bottom" constant="-8" id="AG7-A4-M1c"/>
@@ -176,13 +176,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculated Risk" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbE-ND-A3w">
-                                                    <rect key="frame" x="8" y="140" width="152" height="19.5"/>
+                                                    <rect key="frame" x="8" y="140" width="152" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optimal Risk Factors" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMO-VX-cfm">
-                                                    <rect key="frame" x="160" y="139" width="160" height="19.5"/>
+                                                    <rect key="frame" x="160" y="139" width="160" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -213,7 +213,7 @@
                                                 <constraint firstItem="BIu-si-XyF" firstAttribute="leading" secondItem="yLp-xC-6kW" secondAttribute="trailing" constant="-1" id="jsO-JV-aVb"/>
                                                 <constraint firstItem="P4x-8g-6BD" firstAttribute="leading" secondItem="ya0-Bh-6yE" secondAttribute="leadingMargin" constant="3" id="k01-oY-CBb"/>
                                                 <constraint firstItem="76Q-J5-lRk" firstAttribute="top" secondItem="P4x-8g-6BD" secondAttribute="bottom" constant="8" id="l2C-sB-13Y"/>
-                                                <constraint firstItem="602-Cy-Ybp" firstAttribute="leading" secondItem="ya0-Bh-6yE" secondAttribute="leadingMargin" constant="-8" id="o5T-H2-jxY"/>
+                                                <constraint firstItem="602-Cy-Ybp" firstAttribute="leading" secondItem="ya0-Bh-6yE" secondAttribute="leading" id="o5T-H2-jxY"/>
                                                 <constraint firstItem="JbE-ND-A3w" firstAttribute="centerX" secondItem="76Q-J5-lRk" secondAttribute="centerX" id="qjZ-PO-WiI"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="602-Cy-Ybp" secondAttribute="bottom" constant="-8" id="w5s-J2-6nU"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="BIu-si-XyF" secondAttribute="trailing" id="zFE-TC-Rq7"/>
@@ -254,7 +254,7 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="G8s-UN-ECS" firstAttribute="leading" secondItem="J0r-JC-61X" secondAttribute="leadingMargin" constant="-8" id="1NL-8D-9ub"/>
+                                                <constraint firstItem="G8s-UN-ECS" firstAttribute="leading" secondItem="J0r-JC-61X" secondAttribute="leading" id="1NL-8D-9ub"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="wf2-v4-6tC" secondAttribute="bottom" constant="-8" id="DyV-Tl-fOq"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="wf2-v4-6tC" secondAttribute="trailing" constant="-8" id="KDq-DP-TPS"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="9jU-1c-w3F" secondAttribute="trailing" constant="14" id="UrA-s5-kGE"/>
@@ -284,7 +284,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lifetime Risk Score:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8a-9L-CfN">
-                                                    <rect key="frame" x="22" y="13" width="276" height="20.5"/>
+                                                    <rect key="frame" x="22" y="13" width="276" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -314,7 +314,7 @@
                                                 <constraint firstItem="N9e-Vm-ea6" firstAttribute="leading" secondItem="lC3-kc-slW" secondAttribute="leadingMargin" constant="-8" id="O1P-sz-OnT"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="A8a-9L-CfN" secondAttribute="bottom" constant="48.5" id="VfD-eN-k8u"/>
                                                 <constraint firstItem="wex-TJ-5S4" firstAttribute="top" secondItem="lC3-kc-slW" secondAttribute="topMargin" constant="-8" id="dCL-pP-yTU"/>
-                                                <constraint firstItem="wex-TJ-5S4" firstAttribute="leading" secondItem="lC3-kc-slW" secondAttribute="leadingMargin" constant="-8" id="esI-Al-htP"/>
+                                                <constraint firstItem="wex-TJ-5S4" firstAttribute="leading" secondItem="lC3-kc-slW" secondAttribute="leading" id="esI-Al-htP"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="wex-TJ-5S4" secondAttribute="bottom" constant="-8" id="jOA-Hl-8ej"/>
                                                 <constraint firstItem="fox-Yv-Ngq" firstAttribute="leading" secondItem="lC3-kc-slW" secondAttribute="leading" id="nmt-rk-53M"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="fox-Yv-Ngq" secondAttribute="bottom" constant="-8" id="nup-FO-xDR"/>
@@ -365,7 +365,7 @@
                                                 <constraint firstItem="trJ-ad-HtO" firstAttribute="leading" secondItem="N4c-Vq-kHc" secondAttribute="leadingMargin" constant="-8" id="0hL-r7-UdK"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Hkk-c5-Idc" secondAttribute="trailing" constant="-8" id="2BG-uT-mJN"/>
                                                 <constraint firstItem="NYz-cv-Fno" firstAttribute="top" secondItem="N4c-Vq-kHc" secondAttribute="topMargin" constant="-8" id="4td-qq-gXK"/>
-                                                <constraint firstItem="NYz-cv-Fno" firstAttribute="leading" secondItem="N4c-Vq-kHc" secondAttribute="leadingMargin" constant="-8" id="GNz-8j-Xqb"/>
+                                                <constraint firstItem="NYz-cv-Fno" firstAttribute="leading" secondItem="N4c-Vq-kHc" secondAttribute="leading" id="GNz-8j-Xqb"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="NYz-cv-Fno" secondAttribute="bottom" constant="-8" id="dHB-zk-ypK"/>
                                                 <constraint firstItem="Hkk-c5-Idc" firstAttribute="top" secondItem="N4c-Vq-kHc" secondAttribute="topMargin" constant="-8" id="dZC-iQ-GIX"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="ubd-jD-xMH" secondAttribute="trailing" constant="-8" id="gw0-Ln-KYJ"/>
@@ -422,7 +422,7 @@
                                                 <constraint firstItem="7kh-EV-jKl" firstAttribute="top" secondItem="3sm-kw-OJI" secondAttribute="topMargin" constant="-8" id="WGh-Tm-LAD"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="cde-1b-8XW" secondAttribute="bottom" constant="-8" id="abA-BI-FXf"/>
                                                 <constraint firstItem="8Oo-AY-htt" firstAttribute="top" secondItem="3sm-kw-OJI" secondAttribute="topMargin" constant="3" id="c24-BF-hFW"/>
-                                                <constraint firstItem="KGR-eX-cjF" firstAttribute="leading" secondItem="3sm-kw-OJI" secondAttribute="leadingMargin" constant="-8" id="czA-R5-Q8H"/>
+                                                <constraint firstItem="KGR-eX-cjF" firstAttribute="leading" secondItem="3sm-kw-OJI" secondAttribute="leading" id="czA-R5-Q8H"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="8Oo-AY-htt" secondAttribute="trailing" constant="14" id="hGl-Vl-387"/>
                                                 <constraint firstItem="8Oo-AY-htt" firstAttribute="leading" secondItem="3sm-kw-OJI" secondAttribute="leadingMargin" constant="14" id="kRl-AE-22y"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="cde-1b-8XW" secondAttribute="trailing" constant="-8" id="qZ8-c2-JAl"/>
@@ -448,7 +448,8 @@
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
                     <connections>
                         <outlet property="tableView" destination="siv-HN-wPN" id="rjn-Qd-YFC"/>
                     </connections>
